# GitHubPoster

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README-EN.md  README.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml  run_poster_generate.yml  twitter_backup.yml
IN_FOLDER/: watch-history.json
OUT_FOLDER/: elonmusk.txt  frostming90.txt  laixintao.txt  piglei.txt  yihong0618.txt
contrib/: convert_twitter_archive_to_json_data_source.py
examples/: autosleep.csv  data.json  watch-history.json
github_poster/: __main__.py  circluar_drawer.py  cli.py  config.py  drawer.py  err.py  poster.py  structures.py  utils.py
github_poster/html_parser/: github_parser.py  gitlab_parser.py  jike_parse.py  kindle_parser.py
github_poster/loader/: __init__.py  apple_health_loader.py  autosleep_loader.py  base_loader.py  bbdc_loader.py  bilibili_loader.py  chatgpt_loader.py  cichang_loader.py  config.py  covid_loader.py  dota2_loader.py  gpx_loader.py  (+27 more)
html_parser/: __init__.py  github_parser.py
loader/: __init__.py  base_loader.py  bilibili_loader.py  cichang_loader.py  config.py  dota2_loader.py  duolingo_loader.py  from_github_issue_loader.py  github_loader.py  gitlab_loader.py  gpx_loader.py  kindle_loader.py  leetcode_loader.py  ns_loader.py  shanbay_loader.py  strava_loader.py  twitter_loader.py  wakatime_loader.py  youtube_loader.py
parser/: __init__.py  gitlab_paser.py  kindle_parser.py
skyline/: __init__.py  config.py  skyline.py
tests/: test_poster_utils.py  test_strava_loader.py
(+2 files in other folders)
