[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github_poster"
version = "2.7.4"
description = "Make everything a GitHub svg poster and Skyline!"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "yihong0618", email = "zouzou0208@gmail.com" },
]
dependencies = [
  "colour",
  "pendulum==3.0.0",
  "requests",
  "svgwrite",
]

[project.optional-dependencies]
garmin = ["garminconnect"]
gpx = ["gpxpy"]
strava = ["stravalib==0.10.4"]
github = ["PyGithub"]
skyline = ["sdf_fork"]
todoist = ["pandas"]
all = [
  "PyGithub",
  "garminconnect==0.2.12",
  "gpxpy",
  "pandas",
  "sdf_fork",
  "stravalib==0.10.4",
  "withings_sync==4.1.0",
]

[project.scripts]
github_poster = "github_poster.cli:main"

[project.urls]
Homepage = "https://github.com/yihong0618/GitHubPoster"
Repository = "https://github.com/yihong0618/GitHubPoster"

[dependency-groups]
dev = [
  "black",
  "isort",
  "pre-commit",
  "pytest",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["github_poster*"]

[tool.setuptools.package-data]
"github_poster.skyline.font" = ["*.ttf"]

[tool.isort]
profile = "black"
